--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,6 +35,7 @@
         </activity>
         <activity
             android:name=".activities.CountriesActivity"
+
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
@@ -42,6 +43,7 @@
         </activity>
         <activity
             android:name=".activities.MainActivity"
+            android:theme="@style/MyTheme"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
